--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
-  background: #e0e0e0;
+  background: rgb(12, 12, 32);
   color: #1d1d1d;
 }
 
@@ -14,12 +14,13 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 40px 200px;
+  padding: 15px 200px;
   font-size: 20px;
+  background-color: #999;
 }
 
 .logo {
-  width: 100px;
+  width: 120px;
 }
 
 .logo img {
@@ -52,7 +53,7 @@ nav a {
 
 .show {
   text-align: center;
-  border: 1px solid #000;
+  background-color: #eee;
   border-radius: 15px;
   padding-bottom: 15px;
 }
@@ -72,11 +73,30 @@ nav a {
 }
 
 .like {
+  color: #900;
   font-size: 15px;
+  cursor: pointer;
+  transition: transform 500;
+  animation: heart 1s ease-in-out;
+}
+
+@keyframes heart {
+  25% {
+    transform: rotate(-45deg)
+  }
+
+  75% {
+    transform: rotate(45deg)
+  }
+}
+
+.like:hover {
+  transform: scale(1.3);
 }
 
 .counter {
   font-size: 10px;
+  color: #900;
 }
 
 .title {
