--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Material+Icons+Outlined");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
 * {
   margin: 0;
   padding: 0;
