--- a/src/style.css
+++ b/src/style.css
@@ -280,6 +280,8 @@ footer {
   margin-top: 15px;
   padding: 5px 25px;
   border-radius: 10px;
+  height: 200px;
+  overflow: auto;
 }
 
 .commentList {
